test/samples/invalid/tc/bin01.maruir
fun add(a: u8, b: i8): u8
locals res: u8;
{
    entry:
        res := a + b;
        return res;
}
